Fix ticker layout issues.

--- a/sites/larrylipshultz.com/themes/larrylipshultz/scss/larrylipshultz_style.scss
+++ b/sites/larrylipshultz.com/themes/larrylipshultz/scss/larrylipshultz_style.scss
@@ -911,6 +911,8 @@ a:hover {
 		.view-blogs {
 			ul li {
 				margin: 0 0 20px;
+				display: block;
+				height: 135px;
 				p {
 					padding: 0;
 					margin: 0;
